First iteration of turning previous html sites into render functions

--- a/index.html
+++ b/index.html
@@ -3,40 +3,17 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Document</title>
+    <title>U3 - Andreas Johansson</title>
     <link rel="stylesheet" href="styles/style.css" >
+    <script type="module" src="js/main.js"></script>
   </head>
-  <body class="home__body">
-    <div class="home">
-      <header class="header">
-        <div class="top-bar">
-          <img src="img/logo.svg" alt="pavanmg logo" >
-          <div class="hamburger-menu">
-            <div class="hamburger-menu__bar"></div>
-            <div class="hamburger-menu__bar"></div>
-            <div class="hamburger-menu__bar"></div>
-          </div>
-        </div>
-        <nav class="nav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="tech.html" class="tech-link"></a>
-          <a href="projects.html">Projects</a>
-          <a href="contact.html">Contact</a>
-        </nav>
-        <div class="social-media-icons">
-            <img src="img/twitterlogo.svg" alt="twitter logo" class="twitter-logo">
-            <img src="img/linkedinlogo.svg" alt="linkedin logo" class="linkedin-logo">
-            <img src="img/github.svg" alt="github logo" class="github-logo">
-        </div>
-      </header>
-      <main class="home__main">
-        <p class="home__main__text">Hi 👋, <br>My Name is <br><span class="gradient_text">Hamburglar</span> <br> I build things for web</p>
-        <div class="profile-pic__container"><img src="img/Hamburglar.webp" alt="" class="profile-pic"></div>
-      </main>
-      <footer class="footer">
-        <p class="footer__text">Designed and built by <span class="gradient_text">Hamburglar</span> with <span class="gradient_text">Love & Coffee</span></p>
-      </footer>
-    </div>
+  <body>
+    <header class="header">
+
+    </header>
+    <main>
+      
+    </main>
+
   </body>
 </html>
